# PrusaSlicer

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md  build_release_linux.sh  build_release_macos.sh  build_win.bat  debugbuild.md  dep_GMP.patch  mybuild.md~  mycmake  mydebug  mydebug~  mydeps
.flatpak/: io.github.mjonuschat.PrusaSlicer.metainfo.xml  io.github.mjonuschat.PrusaSlicer.mime.xml  io.github.mjonuschat.PrusaSlicer.yml
.github/ISSUE_TEMPLATE/: bug_report_form.yml  feature_request.yml
.github/scripts/: create_version.py
.github/workflows/: build.yml  build_linux.yml  build_macos.yml  build_windows.yml  deploy.yml  release.yml  stale.yml
bundled_deps/: CMakeLists.txt
bundled_deps/admesh/admesh/: stlinit.cpp
bundled_deps/glad/: CMakeLists.txt
bundled_deps/glad/include/glad/: gl.h  gles2.h
bundled_deps/glad/src/: gles2.c
bundled_deps/stb_dxt/: stb_dxt.h
cmake/modules/: FindDraco.cmake
doc/: Dependencies.md  How to build - Linux et al.md  How to build - Mac OS.md
resources/data/: hints.ini
resources/localization/: PrusaSlicer.pot
resources/profiles/: Creality.ini  E2D.idx  E2D.ini  ElegooSLA.ini  Geeetech.ini  MiiCraftDLP.ini  MiiCraftSLA.idx  MiiCraftSLA.ini  PrusaResearch.ini  RatRig.idx  RatRig.ini  Ultimaker.ini  UniformationSLA.ini
resources/udev/: 90-3dconnexion.rules
sandboxes/opencsg/: CMakeLists.txt  Engine.cpp  ShaderCSGDisplay.cpp  main.cpp
src/: CMakeLists.txt  PrusaSlicer.cpp
src/CLI/: GuiParams.cpp  Setup.cpp
src/libseqarrange/: CMakeLists.txt
src/libslic3r/: AppConfig.cpp  ArrangeHelper.cpp  Brim.cpp  CMakeLists.txt  CMakeLists.txt~  ClipperUtils.cpp  ClipperUtils.hpp  Config.cpp  Config.hpp  Config.hpp~  CutSurface.cpp  Emboss.cpp  Emboss.hpp  ExPolygon.hpp  ExtrusionRole.hpp  FileReader.cpp  Flow.cpp  Flow.hpp  GCode.cpp  GCode.cpp:2743:46:  GCode.hpp  GCodeTimeEstimator.cpp  GCodeTimeEstimator.hpp  Layer.cpp  Layer.hpp  LayerRegion.cpp  LayerRegion.hpp  Measure.cpp  Model.cpp  ModelProcessing.cpp  MultiMaterialAutoColorization.cpp  MultiMaterialAutoColorization.hpp  MultiMaterialSegmentation.cpp  MultipleBeds.cpp  PNGReadWrite.cpp  PNGReadWrite.hpp  PerimeterGenerator.cpp  PerimeterGenerator.hpp  Point.hpp  Polygon.cpp  (+22 more)
src/libvgcode/: CMakeLists.txt
src/occt_wrapper/: CMakeLists.txt  OCCTWrapper.cpp
src/slic3r/: CMakeLists.txt
src/slic3r-arrange/: CMakeLists.txt
src/slic3r-arrange-wrapper/: CMakeLists.txt
tests/: CMakeLists.txt
tests/arrange/: test_arrange.cpp
tests/data/: default_fff.ini
tests/fff_print/: test_flow.cpp  test_gcode.cpp  test_gcodewriter.cpp  test_perimeters.cpp  test_retraction.cpp
tests/libslic3r/: CMakeLists.txt  test_clipper_utils.cpp  test_layer_region.cpp  test_mmu_auto_colorization.cpp
(+206 files in other folders)
